# george-dekermenjian

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  vision.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  cloud-run-service.yaml  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/api/: index.py
backend/app/: __init__.py  agent.py  brain_log_stream.py  config.py  logging_config.py  main.py  posthog_client.py
backend/app/schemas/: __init__.py  brain_log.py
backend/app/tools/: __init__.py  architecture.py  codebase.py  experience.py  lsp_client.py  semantic.py
backend/migrations/: 001_tokenledger.sql
backend/scripts/: deploy.sh
backend/tests/: __init__.py  conftest.py  test_architecture.py  test_brain_log.py  test_brain_log_stream.py  test_codebase.py  test_config.py  test_experience.py  test_lsp_client.py  test_main.py  test_semantic.py
web/: .env.local.example  .prettierignore  .prettierrc  instrumentation-client.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts  vitest.setup.ts
web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
web/app/profile/: page.tsx
web/components/ai-elements/: ai-elements.test.tsx  message.tsx  prompt-input.tsx  reasoning.tsx  shimmer.tsx  tool.tsx
web/components/chat/: ChatInterface.tsx  index.ts
web/components/glass-box/: BrainLog.test.tsx  (+7 more)
web/hooks/: index.ts  useKeyboardShortcuts.ts
web/lib/: api.test.ts  api.ts
(+15 files in other folders)
