[project]
name = "glass-box-backend"
version = "0.1.0"
description = "FastAPI backend for the Glass Box Portfolio - Production-Grade Agentic Systems"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-ai>=1.44.0",
    "pydantic-settings>=2.12.0",
]

[project.scripts]
start = "uvicorn app.main:app --reload"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]
