[project]
name = "glass-box-backend"
version = "0.1.0"
description = "FastAPI backend for the Glass Box Portfolio - Production-Grade Agentic Systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-ai>=1.44.0",
    "pydantic-settings>=2.12.0",
    "posthog>=3.0.0",
]

[project.scripts]
app = "app.main:app"
start = "uvicorn app.main:app --reload"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
